# VAI0

./: .gitignore  Makefile  README.md  config.yml  pyproject.toml  requirements.txt  td_temp.txt  tdtmp.example.txt
.continue/: config.yml
.continue/prompts/: read-project.md
.continue/rules/: CONTINUE.md  system.md
docs/: llm.txt
vaio/: __init__.py  cli.py
vaio/core/: audio.py  caption_translate.py  captions.py  constants.py  description copy.py  description.py  full_auto.py  llm.py  translate.py  tts.py  utils.py
vaio/kb/: __init__.py  cli.py  loader.py  paths.py  query.py  store.py
