[project]
name = "vaio"
version = "1.0.0"
description = "VAIO – Video Auto Intelligence Operator: end-to-end automation for captions, SEO, and translations."
authors = [
  { name = "number16busshelter", email = "admin@axid.one" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Core pipeline
  "ollama>=0.6.0",
  "openai-whisper>=2024.9.30",
  "ffmpeg-python>=0.2.0",
  "tqdm>=4.66.5",
  "numpy>=1.26.0",

  # CLI & IO
  "requests>=2.31.0",
  "rich>=13.7.0",
  "PyYAML>=6.0.1",
  "PyPDF2>=3.0.1",
  "soundfile>=0.12.1",

  # KB stack
  "chromadb>=0.5.5",
  "llama-index>=0.10.0",
  "llama-index-vector-stores-chroma>=0.1.0",
  "llama-index-embeddings-huggingface>=0.1.0",
  "transformers>=4.41.0",
  "sentence-transformers>=3.0.0",

  # TTS backend
  "kokoro>=0.9.4",

  # Optional (Apple Silicon / GPU acceleration, pin per your environment)
  # "torch>=2.2.2; platform_system!='Darwin'",
  # "torch>=2.2.2; platform_system=='Darwin'",
]
[project.scripts]
vaio = "vaio.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

# Alternative if you want to use python -m style invocation
[tool.setuptools.packages.find]
where = ["."]
include = ["vaio*"]
[tool.setuptools]
include-package-data = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
